2007-09-26  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-set-activity)
	(vc-clearcase-show-current-activity): 1.116 use expand-file-name
	on the default-directory -- avoid confusing cleartool

2007-08-20  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-clearcase-lshistory-fmt)
	(ah-clearcase-lshistory-fmt-ucm): 1.115 changed to more compact
	format
	(ah-clearcase-log-view-font-lock-keywords)
	(ah-clearcase-record-separator-rx): 1.115 updated
	(ah-clearcase-log-view-record-field): 1.115 updated for new record
	format.
	(ah-clearcase-log-view-forward-version): 1.115 s/version/revision/
	(vc-clearcase-print-log): 1.115 changed so that output resembles
	the "cvs log" output
	(vc-clearcase-show-log-entry): 1.115 s/version/revision/
	(vc-clearcase-delete-file): 1.115 new function
	(ah-cleartool-lsco-fmt): 1.115 updated
	(vc-clearcase-show-current-activity): 1.115 print a helpful
	message when no activity is set.

2007-07-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-clearcase-file-not-found-handler): 1.114 new
	function
	(clearcase-global-menu): 1.114 add vc-clearcase-report-bug to the
	menu.
	(ah-clearcase-never-report): 1.114 new variable
	(vc-clearcase-report-bug): 1.114 find and report on all variables
	in the vc-clearcase package.

2007-07-09  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-set-activity): 1.113 accept an
	activity name as argument, in interactive mode, ask the user for
	an activity
	(vc-clearcase-show-current-activity): 1.113 new function

2007-07-08  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-clearcase-retrieve-activities): 1.112
	removed
	(ah-clearcase-read-activity): 1.112 also retrieve activities.
	(ah-clearcase-complete-view-tag): 1.112 removed
	(ah-clearcase-read-view-tag): 1.112 use a lambda form for the
	completion function.
	(ah-clearcase-complete-label): 1.112 removed